Fix background image and table spacing on tablet+ devices

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://source.unsplash.com/random/);
+    background-image: url(https://source.unsplash.com/daily?{surfing},{ocean});
     background-attachment: fixed;
     background-size: cover;
 }
